--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,12 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:react/recommended"
+  ],
+  "plugins": ["react"],
   "rules": {
-    // Other rules
+    "react/react-in-jsx-scope": "off",
     "@next/next/no-img-element": "off"
+    
   }
 }
