--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.2.13",
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.15",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-countup": "^6.3.0",
     "react-dom": "18.2.0",
@@ -33,7 +34,8 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.12",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "eslint": "^8.18.0",
+    "eslint-config-next": "^12.1.6",
+    "eslint-plugin-react": "^7.36.1"
   }
 }
